# hl-mai

./: CMakeLists.txt  Dockerfile  docker-compose.yml  helper.h
auth_kafka_service/: main.cpp
auth_service/handlers/: user_handler.h
cache_test/: test.txt
config/: config.cpp  config.h
database/: cache.cpp  cache.h  chat.cpp  chat.h  database.cpp  database.h  message.cpp  message.h  order.cpp  order.h  service.cpp  service.h  user.cpp  user.h  user_to_chat.cpp  user_to_chat.h
diagrams/: compoments.md  context.md  db.md  task.md
docs/apis/: chats.yaml
mariadb/data_generator/: Dockerfile  basemod.py  chat.py  entrypoint.sh  messages.py  order.py  service.py  user.py  user_to_chats.py
messenger_service/: http_request_factory.h  http_web_server.h  main.cpp
messenger_service/handlers/: chat_handler.h  message_handler.h
order_service/: http_order_server.h  http_request_factory.h  main.cpp
order_service/handlers/: order_handler.h
proxysql/: proxysql.cnf
service_service/: http_request_factory.h  http_service_server.h  main.cpp
service_service/handlers/: service_handler.h
